--- a/contact.html
+++ b/contact.html
@@ -16,10 +16,13 @@
                 <div class="nav-logo">
                     <a href="index.html"><img src="https://handyhelpforhire.com.au/assets/img/white-logo.png" alt=""></a>
                 </div>
-                <div class="nav-items">
-                     <ul class="nav-ul">
+                    <input type="checkbox" id="check">
+                    <label for="check" class="checkbtn">
+                        <i class="fa fa-bars"></i>
+                    </label>
+                    <ul class="nav-ul">
                         <li><a href="index.html">HOME</a></li>
-                        <div class="dropdown">
+                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle service-btn" type="button" data-bs-toggle="dropdown">
                                 SERVICES
                             </button>
@@ -35,15 +38,19 @@
                         <li><a href="gallery.html">GALLERY</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
                     </ul>
-                </div>
             </nav>
         </div>
     </section>
     <section class="breadcrumb-wrapper">
         <div class="container">
             <div class="breadcrumb-container">
-                <h1>Contact Us</h1>
-                <p><a href="index.html">Home</a> > <span>Contact Us</span></p>
+                <div class="breadcrumb-gif">
+                    <img src="contact.gif" alt="">
+                </div>
+                <div class="breadcrumb-heading">
+                    <h1>Contact Us</h1>
+                    <p><a href="index.html">Home</a> > <span>Contact Us</span></p>
+                </div>
             </div>
         </div>
     </section>
@@ -62,7 +69,7 @@
                     <h4>Email</h4>
                     <p>handyhelpforhire@gmail.com</p>
                 </div>
-                <div class="col-lg-4 dark">
+                <div class="col-lg-4 dark img-shake">
                     <img src="https://handyhelpforhire.com.au/assets/img/phone.png" alt="">
                     <h4>Phone Number</h4>
                     <p>0427 417 447</p>
@@ -76,7 +83,7 @@
             <p>Need Assistance? Request a Free Consultation Today!</p>
             <form action="">
                 <div class="row">
-                    <div class="col-lg-4 mb-3">
+                    <div class="col-lg-4">
                         <input type="text" placeholder="Your name*" class="form-control">
                     </div>
                     <div class="col-lg-4">
@@ -109,21 +116,21 @@
                 </div>
                 <div class="footer-mid">
                     <div class="row">
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>QUICK LINKS</h4>
                             <p>Home</p>
                             <p>About Us</p>
                             <p>Gallery</p>
                             <p>Contact Us</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>USEFUL LINKS</h4>
                             <p>Search</p>
                             <p>FAQS</p>
                             <p>Our Vision</p>
                             <p>Book Now</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>OUR SERVICES</h4>
                             <p>Garden Maintenance</p>
                             <p>Driveway Pressure Cleaning</p>
@@ -131,7 +138,7 @@
                             <p>Outdoor Maintenance</p>
                             <p>Flatpack Assembly</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>CONTACTS</h4>
                             <p>PHONE</p>
                             <p>0427 417 447</p>
