--- a/gallery.html
+++ b/gallery.html
@@ -16,10 +16,13 @@
                 <div class="nav-logo">
                     <a href="index.html"><img src="https://handyhelpforhire.com.au/assets/img/white-logo.png" alt=""></a>
                 </div>
-                <div class="nav-items">
-                     <ul class="nav-ul">
+                    <input type="checkbox" id="check">
+                    <label for="check" class="checkbtn">
+                        <i class="fa fa-bars"></i>
+                    </label>
+                    <ul class="nav-ul">
                         <li><a href="index.html">HOME</a></li>
-                        <div class="dropdown">
+                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle service-btn" type="button" data-bs-toggle="dropdown">
                                 SERVICES
                             </button>
@@ -35,127 +38,131 @@
                         <li><a href="gallery.html">GALLERY</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
                     </ul>
-                </div>
             </nav>
         </div>
     </section>
     <section class="breadcrumb-wrapper">
         <div class="container">
             <div class="breadcrumb-container">
-                <h1>Gallery</h1>
-                <p><a href="index.html">Home</a> > <span>Gallery</span></p>
+                <div class="breadcrumb-gif">
+                    <img src="gallery.gif" alt="">
+                </div>
+                <div class="breadcrumb-heading">
+                    <h1>Gallery</h1>
+                    <p><a href="index.html">Home</a> > <span>Gallery</span></p>
+                </div>
             </div>
         </div>
     </section>
     <section class="gallery-wrapper">
         <div class="container gallery-container">
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/gallery/lakeheights/IMG_3475.jpg" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/gallery/lakeheights/IMG_3631.jpg" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/gallery/Garden%20hedge/Garden%20Hedge%20Before.jpg" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/gallery/Garden%20hedge/Garden%20Hedge%20After.jpg" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/gallery/flatpacks/IMG_3618.PNG" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/gallery/flatpacks/IMG_3620.jpg" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/gallery/flatpacks/IMG_3621.jpg" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/gallery/flatpacks/IMG_3624.jpg" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/gallery/corrimal/IMG_3610.jpg" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/gallery/corrimal/IMG_3612.jpg" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/gallery/corrimal/IMG_3613.PNG" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/gallery/corrimal/IMG_3614.jpg" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/gallery/corrimal/IMG_3615.jpg" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/gallery/Pool%20hedge/Pool%20Hedge%20Before.jpg" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/gallery/Pool%20hedge/Pool%20Hedge%20After.jpg" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/gallery/bargophotos/IMG_3605.jpg" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/gallery/bargophotos/IMG_3606.jpg" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/gallery/bargophotos/IMG_3607.jpg" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/gallery/bargophotos/IMG_3608.jpg" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/gallery/bargophotos/IMG_3609.jpg" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/new_images/doggy%20door.jpg" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/new_images/fixture%20handy.jpg" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/new_images/backyard.png" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/new_images/furniture%20assembly.jpg" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/new_images/furniture%20assembly.jpg" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/new_images/furniture%20assembly.jpg" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/new_images/hi-pages-9.webp" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/new_images/garden%20maint.jpg" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/new_images/hi-pages-1.webp" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/new_images/hipages-2.webp" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/new_images/hipages3.webp" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/new_images/hipages-4.webp" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/gallery/gallery-2.webp" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/new_images/hi-pages-6.webp" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/new_images/hi-pages-7.webp" alt="">
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/new_images/hi-pages-8.webp" alt="">
                 </div>
             </div>
@@ -174,21 +181,21 @@
                 </div>
                 <div class="footer-mid">
                     <div class="row">
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>QUICK LINKS</h4>
                             <p>Home</p>
                             <p>About Us</p>
                             <p>Gallery</p>
                             <p>Contact Us</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>USEFUL LINKS</h4>
                             <p>Search</p>
                             <p>FAQS</p>
                             <p>Our Vision</p>
                             <p>Book Now</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>OUR SERVICES</h4>
                             <p>Garden Maintenance</p>
                             <p>Driveway Pressure Cleaning</p>
@@ -196,7 +203,7 @@
                             <p>Outdoor Maintenance</p>
                             <p>Flatpack Assembly</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>CONTACTS</h4>
                             <p>PHONE</p>
                             <p>0427 417 447</p>
@@ -219,7 +226,22 @@
         </footer>
     </section>
     
+    <script>
+    function shuffleGallery() {
+        const row = document.querySelector('.gallery-wrapper .row');
+        const columns = Array.from(row.children);
+        const shuffled = columns.sort(() => Math.random() - 0.5);
+        
+        row.innerHTML = ''; // Clear existing elements
+        shuffled.forEach(col => row.appendChild(col)); // Append in shuffled order
+    }
 
+    // Shuffle every 5 seconds
+    setInterval(shuffleGallery, 5000);
+
+    // Initial shuffle on load
+    window.onload = shuffleGallery;
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
