--- a/gardenmaintenance.html
+++ b/gardenmaintenance.html
@@ -16,10 +16,13 @@
                 <div class="nav-logo">
                     <a href="index.html"><img src="https://handyhelpforhire.com.au/assets/img/white-logo.png" alt=""></a>
                 </div>
-                <div class="nav-items">
-                     <ul class="nav-ul">
+                    <input type="checkbox" id="check">
+                    <label for="check" class="checkbtn">
+                        <i class="fa fa-bars"></i>
+                    </label>
+                    <ul class="nav-ul">
                         <li><a href="index.html">HOME</a></li>
-                        <div class="dropdown">
+                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle service-btn" type="button" data-bs-toggle="dropdown">
                                 SERVICES
                             </button>
@@ -35,15 +38,19 @@
                         <li><a href="gallery.html">GALLERY</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
                     </ul>
-                </div>
             </nav>
         </div>
     </section>
     <section class="breadcrumb-wrapper">
         <div class="container">
             <div class="breadcrumb-container">
-                <h1>Garden Maintenance</h1>
-                <p><a href="index.html">Home</a> > Services > <span>Garden Maintenance</span></p>
+                <div class="breadcrumb-gif-a">
+                    <img src="garden.gif" alt="">
+                </div>
+                <div class="breadcrumb-heading-a">
+                    <h1>Garden Maintenance</h1>
+                    <p><a href="index.html">Home</a> > Services > <span>Garden Maintenance</span></p>
+                </div>
             </div>
         </div>
     </section>
@@ -61,7 +68,7 @@
                         <div class="col-lg-6 outer">Garden Clean-ups</div>
                         <div class="col-lg-6 outer">Planting & Replanting</div>
                     </div>
-                    <button class="white-bg-button">Book Now</button>
+                    <a href="contact.html"><button class="white-bg-button">Book Now</button></a>
                 </div>
                 <div class="col-lg-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/gallery/bargophotos/IMG_3609.jpg" alt="">
@@ -120,7 +127,7 @@
             <div class="quote-right">
                 <h2>Keeping Your Outdoor Space Thriving</h2>
                 <p>A lush, healthy garden starts with the right care! At Handy Help For Hire, we make garden maintenance easy with: <br><br> <i class="fa-solid fa-check"></i> Regular Upkeep – Mowing, pruning & weeding for a tidy space. <br> <i class="fa-solid fa-check"></i> Seasonal Care - Keeping plants healthy all year round <br> <i class="fa-solid fa-check"></i> Pest & Disease Control - Stopping issues before they spread. <br> <i class="fa-solid fa-check"></i> Sustainable Practices - Water-wise gardening & decorstive touches <br> <i class="fa-solid fa-check"></i> Landscape Enhancements - Fresh plantings & decorative touches. <br><br> Let Handy Help For Hire handle the tough tasks while you sit back and enjoy a vibrant, well-maintained garden without the hassle!</p>
-                <button class="white-bg-button">Get a free quote</button>
+                <a href="contact.html"></a><button class="white-bg-button">Get a free quote</button></a>
             </div>
         </div>
     </section>
@@ -137,21 +144,21 @@
                 </div>
                 <div class="footer-mid">
                     <div class="row">
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>QUICK LINKS</h4>
                             <p>Home</p>
                             <p>About Us</p>
                             <p>Gallery</p>
                             <p>Contact Us</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>USEFUL LINKS</h4>
                             <p>Search</p>
                             <p>FAQS</p>
                             <p>Our Vision</p>
                             <p>Book Now</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>OUR SERVICES</h4>
                             <p>Garden Maintenance</p>
                             <p>Driveway Pressure Cleaning</p>
@@ -159,7 +166,7 @@
                             <p>Outdoor Maintenance</p>
                             <p>Flatpack Assembly</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>CONTACTS</h4>
                             <p>PHONE</p>
                             <p>0427 417 447</p>
