--- a/handymanservices.html
+++ b/handymanservices.html
@@ -10,16 +10,19 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.12.1/font/bootstrap-icons.min.css">
 </head>
 <body>
-    <section class="navbar-wrapper">
+   <section class="navbar-wrapper">
         <div class="container">
             <nav class="nav-container">
                 <div class="nav-logo">
                     <a href="index.html"><img src="https://handyhelpforhire.com.au/assets/img/white-logo.png" alt=""></a>
                 </div>
-                <div class="nav-items">
-                     <ul class="nav-ul">
+                    <input type="checkbox" id="check">
+                    <label for="check" class="checkbtn">
+                        <i class="fa fa-bars"></i>
+                    </label>
+                    <ul class="nav-ul">
                         <li><a href="index.html">HOME</a></li>
-                        <div class="dropdown">
+                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle service-btn" type="button" data-bs-toggle="dropdown">
                                 SERVICES
                             </button>
@@ -35,15 +38,19 @@
                         <li><a href="gallery.html">GALLERY</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
                     </ul>
-                </div>
             </nav>
         </div>
     </section>
     <section class="breadcrumb-wrapper">
         <div class="container">
             <div class="breadcrumb-container">
-                <h1>Handyman Services</h1>
-                <p><a href="index.html">Home</a> > Services > <span>Handyman Services</span></p>
+                <div class="breadcrumb-gif-a">
+                    <img src="handyman-services.gif" alt="">
+                </div>
+                <div class="breadcrumb-heading-a">
+                    <h1>Handyman Services</h1>
+                    <p><a href="index.html">Home</a> > Services > <span>Handyman Services</span></p>
+                </div>
             </div>
         </div>
     </section>
@@ -63,7 +70,7 @@
                         <div class="col-lg-6 outer">Curtain Rod Installation</div>
                         <div class="col-lg-6 outer">Blind Installation</div>
                     </div>
-                    <button class="white-bg-button">Book Now</button>
+                    <a href="contact.html"><button class="white-bg-button">Book Now</button></a>
                 </div>
                 <div class="col-lg-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/new_images/fixture%20handy.jpg" alt="">
@@ -128,7 +135,7 @@
                     <i class="fa-solid fa-check"></i> Prompt & Efficient Service - Quick turnarounds to keep your home running smoothly. <br>
                     <i class="fa-solid fa-check"></i> Reliable & Trustworthy Help - A friendly team you can count on to deliver both quality and peace of mind.
                      <br> <br> From repairs to installations, we offer a home repairs and services tailored to meet the needs of Illawarra homeowners. Let us tackle the to-do list, so you can enjoy a well-maintained, functional home-without the stress.</p>
-                <button class="white-bg-button">Get a free quote</button>
+                <a href="contact.html"><button class="white-bg-button">Get a free quote</button></a>
             </div>
         </div>
     </section>
@@ -145,21 +152,21 @@
                 </div>
                 <div class="footer-mid">
                     <div class="row">
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>QUICK LINKS</h4>
                             <p>Home</p>
                             <p>About Us</p>
                             <p>Gallery</p>
                             <p>Contact Us</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>USEFUL LINKS</h4>
                             <p>Search</p>
                             <p>FAQS</p>
                             <p>Our Vision</p>
                             <p>Book Now</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>OUR SERVICES</h4>
                             <p>Garden Maintenance</p>
                             <p>Driveway Pressure Cleaning</p>
@@ -167,7 +174,7 @@
                             <p>Outdoor Maintenance</p>
                             <p>Flatpack Assembly</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>CONTACTS</h4>
                             <p>PHONE</p>
                             <p>0427 417 447</p>
