--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
                 <div class="nav-logo">
                     <a href="index.html"><img src="https://handyhelpforhire.com.au/assets/img/white-logo.png" alt=""></a>
                 </div>
-                <div class="nav-items">
+                    <input type="checkbox" id="check">
+                    <label for="check" class="checkbtn">
+                        <i class="fa fa-bars"></i>
+                    </label>
                     <ul class="nav-ul">
+                        <button id="close-btn" class="cross white-bg-button">X</button>
                         <li><a href="index.html">HOME</a></li>
                          <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle service-btn" type="button" data-bs-toggle="dropdown">
@@ -35,7 +39,6 @@
                         <li><a href="gallery.html">GALLERY</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
                     </ul>
-                </div>
             </nav>
         </div>
     </section>
@@ -61,7 +64,7 @@
                 <div class="carousel-text">
                     <h1>Fixing the Little Things <i>Making a</i> Big <br> Difference! Small Jobs, Big Results</h1>
                     <p><i>WE TREAT</i> every projects as unique, offering tailored solutions to meet your needs.</p>
-                    <a href="#"><button class="white-bg-button">Book An Appointment Today! <i class="fa-solid fa-arrow-down rotate-45"></i></button></a>
+                    <a href="contact.html"><button class="white-bg-button">Book An Appointment Today! <i class="fa-solid fa-arrow-down rotate-45"></i></button></a>
                 </div>
             </div>
         </div>
@@ -83,7 +86,7 @@
             <div class="about-bottom">
                 <div class="about-bottom-left">
                     <p>We particularly cater for people who need and extra hand around the house. Whether you're looking for help with simple repairs, tidying up your garden, or tackling household maintenance tasks, we are just a call away. We pride ourselves on being approachable, reliable, and committed to making your home or office the best it can be.</p>
-                    <a href="#"><button class="white-bg-button">Services Area <i class="fa-solid fa-arrow-down rotate-45"></i></button></a>
+                    <a href="contact.html"><button class="white-bg-button">Services Area <i class="fa-solid fa-arrow-down rotate-45"></i></button></a>
                 </div>
                 <div class="about-bottom-right">
                     <div class="progress-container">
@@ -95,8 +98,10 @@
                                         stroke-dasharray="282" stroke-dashoffset="40" />
                             </svg>
                         </div>
-                        <p class="title">SPENT PER PROJECT</p>
-                        <p class="subtitle">Reliable</p>
+                        <div class="progress-headings">
+                            <p class="title">SPENT PER PROJECT</p>
+                            <p class="subtitle">Reliable</p>
+                        </div>
                     </div>
                     <div class="progress-container">
                         <div class="progress-circle-2">
@@ -107,8 +112,10 @@
                                         stroke-dasharray="282" stroke-dashoffset="30" />
                             </svg>
                         </div>
-                        <p class="title">Basic Concept</p>
-                        <p class="subtitle">Efficient</p>
+                        <div class="progress-headings">
+                            <p class="title">Basic Concept</p>
+                            <p class="subtitle">Efficient</p>
+                        </div>
                     </div>
                     <div class="progress-container">
                         <div class="progress-circle-3">
@@ -119,8 +126,10 @@
                                         stroke-dasharray="282" stroke-dashoffset="0" />
                             </svg>
                         </div>
-                        <p class="title">INSURED AND TRUSTED</p>
-                        <p class="subtitle">Guaranteed</p>
+                        <div class="progress-headings">
+                            <p class="title">INSURED AND TRUSTED</p>
+                            <p class="subtitle">Guaranteed</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -149,7 +158,7 @@
             </div>
         </div>
         <div class="services-button">
-            <a href="#"><button class="white-bg-button">View All Services <i class="fa-solid fa-arrow-down rotate-45"></i></button></a>
+            <a href="handymanservices.html"><button class="white-bg-button">View All Services <i class="fa-solid fa-arrow-down rotate-45"></i></button></a>
         </div>
     </section>
     <section class="why-choose-us-wrapper">
@@ -201,7 +210,7 @@
             </div>
         </div>
         <div class="gallery-btn">
-            <a href="#"><button class="white-bg-button">View Gallery <i class="fa-solid fa-arrow-down rotate-45 "></i></button></a>
+            <a href="gallery.html"><button class="white-bg-button">View Gallery <i class="fa-solid fa-arrow-down rotate-45 "></i></button></a>
         </div>
     </section>
     <section class="scroll-wrapper">
@@ -222,6 +231,24 @@
             </div>
         </div>
     </section>
+    <section class="videos-wrapper">
+        <div class="container">
+            <div class="video-headings">
+                <h5>Videos</h5>
+                <h1>Our Work</h1>
+            </div>
+            <div class="videos">
+                <video width="600" height="600" autoplay muted loop>
+                  <source src="vdo1.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                </video>
+                <video width="600" height="600" autoplay muted loop >
+                  <source src="vdo2.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                </video>
+            </div>
+        </div>
+    </section>
     <section class="footer-wrapper">
         <footer>
             <div class="container">
@@ -235,21 +262,21 @@
                 </div>
                 <div class="footer-mid">
                     <div class="row">
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>QUICK LINKS</h4>
                             <p>Home</p>
                             <p>About Us</p>
                             <p>Gallery</p>
                             <p>Contact Us</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>USEFUL LINKS</h4>
                             <p>Search</p>
                             <p>FAQS</p>
                             <p>Our Vision</p>
                             <p>Book Now</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>OUR SERVICES</h4>
                             <p>Garden Maintenance</p>
                             <p>Driveway Pressure Cleaning</p>
@@ -257,7 +284,7 @@
                             <p>Outdoor Maintenance</p>
                             <p>Flatpack Assembly</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>CONTACTS</h4>
                             <p>PHONE</p>
                             <p>0427 417 447</p>
@@ -280,7 +307,12 @@
         </footer>
     </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js
-"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+    document.getElementById('close-btn').addEventListener('click', function() {
+        document.getElementById('check').checked = false;
+    });
+</script>
 </body>
 </html>
