--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.12.1/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 <body>
     <section class="navbar-wrapper">
@@ -16,10 +17,13 @@
                 <div class="nav-logo">
                     <a href="index.html"><img src="https://handyhelpforhire.com.au/assets/img/white-logo.png" alt=""></a>
                 </div>
-                <div class="nav-items">
+                    <input type="checkbox" id="check">
+                    <label for="check" class="checkbtn">
+                        <i class="fa fa-bars"></i>
+                    </label>
                     <ul class="nav-ul">
                         <li><a href="index.html">HOME</a></li>
-                        <div class="dropdown">
+                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle service-btn" type="button" data-bs-toggle="dropdown">
                                 SERVICES
                             </button>
@@ -35,15 +39,19 @@
                         <li><a href="gallery.html">GALLERY</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
                     </ul>
-                </div>
             </nav>
         </div>
     </section>
     <section class="breadcrumb-wrapper">
         <div class="container">
             <div class="breadcrumb-container">
-                <h1>About Us</h1>
-                <p><a href="index.html">Home</a> > <span>About Us</span></p>
+                <div class="breadcrumb-gif">
+                    <img src="handyman.gif" alt="">
+                </div>
+                <div class="breadcrumb-heading">
+                    <h1>About Us</h1>
+                    <p><a class="breadcrumb-a" href="index.html">Home</a> > <span>About Us</span></p>
+                </div>
             </div>
         </div>
     </section>
@@ -62,22 +70,22 @@
     <section class="about-services-wrapper">
         <div class="container about-services">
             <div class="row">
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/maintenance.png" alt="">
                     <h4>Reliable Solutions, Effortless Living</h4>
                     <p>Taking care of your home and office needs with expert handyman services you can count on.</p>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/gear.png" alt="">
                     <h4>Skilled Hands, Lasting Results</h4>
                     <p>From minor repairs to major fixes, we ensure quality workmanship that stands the test of time.</p>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/calendar.png" alt="">
                     <h4>Convenience & Expertise, All in One</h4>
                     <p>Hassle-free handyman solutions tailored to fit your schedule and requirements.</p>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/quality.png" alt="">
                     <h4>Trusted Professionals, Stress-Free Service</h4>
                     <p>Reliable, efficient and affordable services designed to simplify your everyday life.</p>
@@ -88,7 +96,25 @@
     <section class="about-why-choose-us-wrapper">
         <div class="container about-why-choose-us">
             <div class="about-why-choose-us-left">
-                <img src="https://handyhelpforhire.com.au/assets/img/new_images/doggy%20door.jpg" alt="">
+                <div class="why-choose-us-left-img">
+                    <img src="https://handyhelpforhire.com.au/assets/img/new_images/doggy%20door.jpg" alt="">
+                </div>
+
+                <div class="swiper mySwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <svg fill="#ffffff" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 511.999 511.999" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <path d="M438.129,477.309l-50.852-38.863c35.634-39.396,57.367-91.591,57.367-148.77c0-56.844-21.485-108.758-56.748-148.073 L350.41,179.09c25.713,29.666,41.289,68.341,41.289,110.586c0,93.216-75.837,169.053-169.053,169.053 S53.592,382.893,53.592,289.676s75.838-169.052,169.053-169.052c42.245,0,80.921,15.576,110.586,41.286l37.486-37.486 c-39.315-35.263-91.228-56.748-148.073-56.748c-122.411,0-222.001,99.59-222.001,222.001c0,57.178,21.733,109.374,57.367,148.77 L7.158,477.309c-7.996,6.11-9.524,17.547-3.414,25.542c3.587,4.693,9.008,7.159,14.491,7.159c3.858,0,7.748-1.221,11.051-3.745 l52.292-39.963c1.136-0.869,2.126-1.854,2.998-2.912c37.927,30.207,85.923,48.287,138.066,48.287s100.139-18.08,138.066-48.287 c0.872,1.058,1.862,2.043,2.998,2.912l52.292,39.963c3.303,2.524,7.192,3.745,11.051,3.745c5.484,0,10.905-2.466,14.491-7.159 C447.653,494.855,446.125,483.42,438.129,477.309z"></path> </g> </g> <g> <g> <path d="M333.181,196.321l-30.52,30.52c13.631,17.321,21.794,39.136,21.794,62.836c0,56.139-45.672,101.81-101.81,101.81 c-56.138,0-101.81-45.672-101.81-101.81s45.672-101.81,101.81-101.81c23.7,0,45.516,8.162,62.836,21.794L316,179.14 c-25.222-21.336-57.81-34.221-93.355-34.221c-79.82,0-144.757,64.937-144.757,144.757s64.937,144.757,144.757,144.757 s144.757-64.937,144.757-144.757C367.402,254.131,354.516,221.544,333.181,196.321z"></path> </g> </g> <g> <g> <path d="M285.336,244.167l-25.295,25.295c3.265,6.016,5.122,12.904,5.122,20.216c0,23.445-19.074,42.518-42.518,42.518 c-23.445,0-42.518-19.074-42.518-42.518s19.074-42.518,42.518-42.518c7.313,0,14.2,1.856,20.216,5.122l25.295-25.295 c-12.791-9.311-28.515-14.823-45.51-14.823c-42.742,0-77.514,34.773-77.514,77.514c0,42.742,34.773,77.514,77.514,77.514 c42.742,0,77.514-34.773,77.514-77.514C300.159,272.683,294.648,256.958,285.336,244.167z"></path> </g> </g> <g> <g> <path d="M493.779,35.968h-17.424V18.544c0-10.063-8.159-18.222-18.222-18.222c-10.063,0-18.222,8.159-18.222,18.222V54.19 c0,0.335,0.033,0.661,0.05,0.991l-1.925,1.925v-0.244c0-10.063-8.159-18.222-18.222-18.222c-10.063,0-18.222,8.159-18.222,18.222 v35.646c0,0.335,0.033,0.661,0.05,0.991l-30.922,30.922c6.033,5.412,11.769,11.147,17.181,17.181l30.922-30.922 c0.33,0.018,0.657,0.05,0.991,0.05h35.646c10.063,0,18.222-8.159,18.222-18.222c0-10.063-8.159-18.222-18.222-18.222h-0.244 l1.925-1.925c0.33,0.018,0.657,0.05,0.991,0.05h35.646c10.063,0,18.222-8.159,18.222-18.222 C511.999,44.126,503.842,35.968,493.779,35.968z"></path> </g> </g> </g></svg>
+                            <h4>Our Mission</h4>
+                            <p>Delivering reliable, high-quality handyman services for stress-free maintenance.</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M15.0007 12C15.0007 13.6569 13.6576 15 12.0007 15C10.3439 15 9.00073 13.6569 9.00073 12C9.00073 10.3431 10.3439 9 12.0007 9C13.6576 9 15.0007 10.3431 15.0007 12Z" stroke="#ffffff" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"></path> <path d="M12.0012 5C7.52354 5 3.73326 7.94288 2.45898 12C3.73324 16.0571 7.52354 19 12.0012 19C16.4788 19 20.2691 16.0571 21.5434 12C20.2691 7.94291 16.4788 5 12.0012 5Z" stroke="#ffffff" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
+                            <h4>Our Vision</h4>
+                            <p>Becoming the top choice for reapirs and maintenance, ensuring peace of mind.</p>
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
             </div>
             <div class="about-why-choose-us-right">
                 <h6>Quality That Lasts</h6>
@@ -102,6 +128,7 @@
                     <li><i class="fa-regular fa-circle-check"></i>&nbsp;&nbsp;Wide Range of Services</li>
                     <li><i class="fa-regular fa-circle-check"></i>&nbsp;&nbsp;Easy Booking & Fast Response</li>
                 </ul>
+                <a href="contact.html"><button class="white-bg-button">Contact Us Now</button></a>
             </div>
         </div>
     </section>
@@ -190,12 +217,18 @@
     </section>
     <section class="about-get-quote-wrapper">
         <div class="container about-get-quote">
-            <div class="about-get-quote-left">
-                <h4>Get a Free Quote</h4>
-                <p>Let us handle your repairs and maintenance with expert handyman solutions. Contact us today for a hassle-free consultation!</p>
-            </div>
-            <div class="about-get-quote-right">
-                <button class="white-bg-button">Get a Quote</button>
+            <div class="row">
+                <div class="col-lg-9 col-md-9">
+                    <div class="about-get-quote-left">
+                        <h4>Get a Free Quote</h4>
+                        <p>Let us handle your repairs and maintenance with expert handyman solutions. Contact us today for a hassle-free consultation!</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3">
+                    <div class="about-get-quote-right">
+                        <a href="contact.html"><button class="white-bg-button">Get a Quote</button></a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -212,21 +245,21 @@
                 </div>
                 <div class="footer-mid">
                     <div class="row">
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>QUICK LINKS</h4>
                             <p>Home</p>
                             <p>About Us</p>
                             <p>Gallery</p>
                             <p>Contact Us</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>USEFUL LINKS</h4>
                             <p>Search</p>
                             <p>FAQS</p>
                             <p>Our Vision</p>
                             <p>Book Now</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>OUR SERVICES</h4>
                             <p>Garden Maintenance</p>
                             <p>Driveway Pressure Cleaning</p>
@@ -234,7 +267,7 @@
                             <p>Outdoor Maintenance</p>
                             <p>Flatpack Assembly</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>CONTACTS</h4>
                             <p>PHONE</p>
                             <p>0427 417 447</p>
@@ -257,7 +290,28 @@
         </footer>
     </section>
     
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
+    <!-- Initialize Swiper -->
+    <script>
+        var swiper = new Swiper(".mySwiper", {
+        spaceBetween: 30,
+        centeredSlides: true,
+        autoplay: {
+            delay: 2500,
+            disableOnInteraction: false,
+        },
+        pagination: {
+            el: ".swiper-pagination",
+            clickable: true,
+        },
+        navigation: {
+            nextEl: ".swiper-button-next",
+            prevEl: ".swiper-button-prev",
+        },
+        });
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
