--- a/drivewaypressurecleaning.html
+++ b/drivewaypressurecleaning.html
@@ -16,10 +16,13 @@
                 <div class="nav-logo">
                     <a href="index.html"><img src="https://handyhelpforhire.com.au/assets/img/white-logo.png" alt=""></a>
                 </div>
-                <div class="nav-items">
-                     <ul class="nav-ul">
+                    <input type="checkbox" id="check">
+                    <label for="check" class="checkbtn">
+                        <i class="fa fa-bars"></i>
+                    </label>
+                    <ul class="nav-ul">
                         <li><a href="index.html">HOME</a></li>
-                        <div class="dropdown">
+                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle service-btn" type="button" data-bs-toggle="dropdown">
                                 SERVICES
                             </button>
@@ -35,15 +38,19 @@
                         <li><a href="gallery.html">GALLERY</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
                     </ul>
-                </div>
             </nav>
         </div>
     </section>
     <section class="breadcrumb-wrapper">
         <div class="container">
             <div class="breadcrumb-container">
-                <h1>Driveway Pressure Cleaning</h1>
-                <p><a href="index.html">Home</a> > Services > <span>Driveway Pressure Cleaning</span></p>
+                <div class="breadcrumb-gif-a">
+                    <img src="driveway.gif" alt="">
+                </div>
+                <div class="breadcrumb-heading-a">
+                    <h1>Driveway Pressure Cleaning</h1>
+                    <p><a href="index.html">Home</a> > Services > <span>Driveway Pressure Cleaning</span></p>
+                </div>
             </div>
         </div>
     </section>
@@ -61,7 +68,7 @@
                         <div class="col-lg-6 outer">Stubborn Oil & Grease</div>
                         <div class="col-lg-6 outer">Driveway Edges & Surrounds</div>
                     </div>
-                    <button class="white-bg-button">Book Now</button>
+                    <a href="contact.html"><button class="white-bg-button">Book Now</button></a>
                 </div>
                 <div class="col-lg-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/service/driveway-cleaning.jpg" alt="">
@@ -120,7 +127,7 @@
             <div class="quote-right">
                 <h2>Stress-Free Driveway Cleaning</h2>
                 <p>At Handy Help For Hire, we make driveway maintenance easy and effective with: <br><br> <i class="fa-solid fa-check"></i> Reliable Results - Restores the clean, fresh look of your home's exterior. <br> <i class="fa-solid fa-check"></i> Skilled Professionals - Experienced team using the right tools for each job. <br> <i class="fa-solid fa-check"></i> Time-Saving Service - Quick and through cleaning, with no mess left behind. <br> <i class="fa-solid fa-check"></i> Surface Protection - Gentle on driveways, toughon stains and dirt. <br> <br> From everyday dirt to stubborn stains, we'll revive your driveway so it looks great and lasts longer-without you lifting a finger!</p>
-                <button class="white-bg-button">Get a free quote</button>
+                <a href="contact.html"><button class="white-bg-button">Get a free quote</button></a>
             </div>
         </div>
     </section>
@@ -137,21 +144,21 @@
                 </div>
                 <div class="footer-mid">
                     <div class="row">
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>QUICK LINKS</h4>
                             <p>Home</p>
                             <p>About Us</p>
                             <p>Gallery</p>
                             <p>Contact Us</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>USEFUL LINKS</h4>
                             <p>Search</p>
                             <p>FAQS</p>
                             <p>Our Vision</p>
                             <p>Book Now</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>OUR SERVICES</h4>
                             <p>Garden Maintenance</p>
                             <p>Driveway Pressure Cleaning</p>
@@ -159,7 +166,7 @@
                             <p>Outdoor Maintenance</p>
                             <p>Flatpack Assembly</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>CONTACTS</h4>
                             <p>PHONE</p>
                             <p>0427 417 447</p>
