--- a/outdoormaintenance.html
+++ b/outdoormaintenance.html
@@ -16,10 +16,13 @@
                 <div class="nav-logo">
                     <a href="index.html"><img src="https://handyhelpforhire.com.au/assets/img/white-logo.png" alt=""></a>
                 </div>
-                <div class="nav-items">
-                     <ul class="nav-ul">
+                    <input type="checkbox" id="check">
+                    <label for="check" class="checkbtn">
+                        <i class="fa fa-bars"></i>
+                    </label>
+                    <ul class="nav-ul">
                         <li><a href="index.html">HOME</a></li>
-                        <div class="dropdown">
+                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle service-btn" type="button" data-bs-toggle="dropdown">
                                 SERVICES
                             </button>
@@ -35,15 +38,19 @@
                         <li><a href="gallery.html">GALLERY</a></li>
                         <li><a href="contact.html">CONTACT</a></li>
                     </ul>
-                </div>
             </nav>
         </div>
     </section>
     <section class="breadcrumb-wrapper">
         <div class="container">
             <div class="breadcrumb-container">
-                <h1>Outdoor Maintenance</h1>
-                <p><a href="index.html">Home</a> > Services > <span>Outdoor Maintenance</span></p>
+                <div class="breadcrumb-gif-a">
+                    <img src="outdoor.gif" alt="">
+                </div>
+                <div class="breadcrumb-heading-a">
+                    <h1>Outdoor Maintenance</h1>
+                    <p><a href="index.html">Home</a> > Services > <span>Outdoor Maintenance</span></p>
+                    </div>
             </div>
         </div>
     </section>
@@ -61,7 +68,7 @@
                         <div class="col-lg-6 outer">Shed & Outdoor Storage Assembly</div>
                         <div class="col-lg-6 outer">Outdoor Fixture Installation</div>
                     </div>
-                    <button class="white-bg-button">Book Now</button>
+                    <a href="contact.html"><button class="white-bg-button">Book Now</button></a>
                 </div>
                 <div class="col-lg-6">
                     <img src="https://handyhelpforhire.com.au/assets/img/new_images/pool%20hedge.jpg" alt="">
@@ -125,7 +132,7 @@
                     <i class="fa-solid fa-check"></i> Time-Saving Solutions - Let us handle the work so you can enjoy your space. <br> 
                     <i class="fa-solid fa-check"></i> Weatherproofing & Protection - Helping you maintain your home's exterior against the elements. <br>
                      <br> <br> Whether it's a quick fix or full refresh, we'll keep your outdoor areas safe, functional, and looking great all year round!</p>
-                <button class="white-bg-button">Get a free quote</button>
+                <a href="contact.html"><button class="white-bg-button">Get a free quote</button></a>
             </div>
         </div>
     </section>
@@ -142,21 +149,21 @@
                 </div>
                 <div class="footer-mid">
                     <div class="row">
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>QUICK LINKS</h4>
                             <p>Home</p>
                             <p>About Us</p>
                             <p>Gallery</p>
                             <p>Contact Us</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>USEFUL LINKS</h4>
                             <p>Search</p>
                             <p>FAQS</p>
                             <p>Our Vision</p>
                             <p>Book Now</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>OUR SERVICES</h4>
                             <p>Garden Maintenance</p>
                             <p>Driveway Pressure Cleaning</p>
@@ -164,7 +171,7 @@
                             <p>Outdoor Maintenance</p>
                             <p>Flatpack Assembly</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-3 col-md-6">
                             <h4>CONTACTS</h4>
                             <p>PHONE</p>
                             <p>0427 417 447</p>
