--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Handy Help For Hire</title>
+    <link rel="icon" href="https://handyhelpforhire.com.au/assets/img/white-logo.png">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
@@ -40,6 +41,26 @@
                         <li><a href="contact.html">CONTACT</a></li>
                     </ul>
             </nav>
+        </div>
+    </section>
+    <section class="need-help-wrapper">
+        <div class="need-help">
+            <button id="needHelpBtn" class="need-help-btn"><i class="bi bi-chat-left-dots"></i></button>
+        </div>
+        <div id="needHelpForm" class="need-help-form hidden">
+            <input type="text" placeholder="Your Name" class="form-control">
+            <input type="email" placeholder="Your Email Address" class="form-control">
+            <input type="tel" placeholder="Your Phone Number" class="form-control">
+            <select class="form-control">
+                <option>Select Services 🡳</option>
+                <option>Handyman Service</option>
+                <option>Driveway Pressure Cleaning</option>
+                <option>Flatpack Assembly</option>
+                <option>Garden Maintenance</option>
+                <option>Outdoor Maintenance</option>
+            </select>
+            <textarea placeholder="Write your message here?" class="form-control"></textarea>
+            <button type="submit" class="form-control">Send Now</button>
         </div>
     </section>
     <section class="hero-wrapper">
@@ -264,25 +285,25 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-6">
                             <h4>QUICK LINKS</h4>
-                            <p>Home</p>
-                            <p>About Us</p>
-                            <p>Gallery</p>
-                            <p>Contact Us</p>
+                            <a href="index.html"><p>Home</p></a>
+                            <a href="about.html"><p>About Us</p></a>
+                            <a href="gallery.html"><p>Gallery</p></a>
+                            <a href="contact.html"><p>Contact</p></a>
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <h4>USEFUL LINKS</h4>
                             <p>Search</p>
                             <p>FAQS</p>
-                            <p>Our Vision</p>
-                            <p>Book Now</p>
+                            <a href="about.html"><p>Our Vision</p></a>
+                            <a href="contact.html"><p>Book Now</p></a>
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <h4>OUR SERVICES</h4>
-                            <p>Garden Maintenance</p>
-                            <p>Driveway Pressure Cleaning</p>
-                            <p>Handyman Services</p>
-                            <p>Outdoor Maintenance</p>
-                            <p>Flatpack Assembly</p>
+                            <a href="gardenmaintenance.html"><p>Garden Maintenance</p></a>
+                            <a href="drivewaypressurecleaning.html"><p>Driveway Pressure Cleaning</p></a>
+                            <a href="handymanservices.html"><p>Handyman Services</p></a>
+                            <a href="outdoormaintenance.html"><p>Outdoor Maintenance</p></a>
+                            <a href="flatpackassembly.html"><p>Flatpack Assembly</p></a>
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <h4>CONTACTS</h4>
@@ -307,12 +328,21 @@
         </footer>
     </section>
 
+    <script>
+        const needHelpBtn = document.getElementById('needHelpBtn');
+        const needHelpForm = document.getElementById('needHelpForm');
+
+        needHelpBtn.addEventListener('click', ()=>{
+          needHelpForm.classList.toggle('hidden');
+        })
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
-    document.getElementById('close-btn').addEventListener('click', function() {
+        document.getElementById('close-btn').addEventListener('click', function() {
         document.getElementById('check').checked = false;
-    });
-</script>
+        });
+    </script>
+    
 </body>
 </html>
