--- a/outdoormaintenance.html
+++ b/outdoormaintenance.html
@@ -150,7 +150,7 @@
                 <h2>Enjoy a Well-Maintained Outdoor Space</h2>
                 <p>At Handy Help For Hire, we take the hassle out of outdoor maintenance by offering:   <br><br> 
                     <i class="fa-solid fa-check"></i> Reliable Service – From small fixes to larger projects, we do it right the first time. <br> 
-                    <i class="fa-solid fa-check"></i> Skilled Workmanship – Experienced handymen ensuring quality results.
+                    <i class="fa-solid fa-check"></i> Skilled Workmanship – Experienced handymen ensuring quality results. <br>
                     <i class="fa-solid fa-check"></i> Time-Saving Solutions - Let us handle the work so you can enjoy your space. <br> 
                     <i class="fa-solid fa-check"></i> Weatherproofing & Protection - Helping you maintain your home's exterior against the elements. <br>
                      <br> <br> Whether it's a quick fix or full refresh, we'll keep your outdoor areas safe, functional, and looking great all year round!</p>
