--- a/drivewaypressurecleaning.html
+++ b/drivewaypressurecleaning.html
@@ -168,7 +168,7 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-6">
                             <h4>QUICK LINKS</h4>
-                            <a href="home.html"><p>Home</p></a>
+                            <a href="index.html"><p>Home</p></a>
                             <a href="about.html"><p>About Us</p></a>
                             <a href="gallery.html"><p>Gallery</p></a>
                             <a href="contact.html"><p>Contact Us</p></a>
