nav-link updated

--- a/gardenmaintenance.html
+++ b/gardenmaintenance.html
@@ -149,7 +149,7 @@
             <div class="quote-right">
                 <h2>Keeping Your Outdoor Space Thriving</h2>
                 <p>A lush, healthy garden starts with the right care! At Handy Help For Hire, we make garden maintenance easy with: <br><br> <i class="fa-solid fa-check"></i> Regular Upkeep – Mowing, pruning & weeding for a tidy space. <br> <i class="fa-solid fa-check"></i> Seasonal Care - Keeping plants healthy all year round <br> <i class="fa-solid fa-check"></i> Pest & Disease Control - Stopping issues before they spread. <br> <i class="fa-solid fa-check"></i> Sustainable Practices - Water-wise gardening & decorstive touches <br> <i class="fa-solid fa-check"></i> Landscape Enhancements - Fresh plantings & decorative touches. <br><br> Let Handy Help For Hire handle the tough tasks while you sit back and enjoy a vibrant, well-maintained garden without the hassle!</p>
-                <a href="contact.html"></a><button class="white-bg-button">Get a free quote</button></a>
+                <a href="contact.html"><button class="white-bg-button">Get a free quote</button></a>
             </div>
         </div>
     </section>
