breadcrumb backgrounds added

--- a/drivewaypressurecleaning.html
+++ b/drivewaypressurecleaning.html
@@ -64,12 +64,9 @@
         </div>
     </section>
     <section class="breadcrumb-wrapper">
-        <div class="container">
-            <div class="breadcrumb-container">
-                <div class="breadcrumb-gif-a">
-                    <img src="./gifs/driveway.gif" alt="">
-                </div>
-                <div class="breadcrumb-heading-a">
+        <div class="driveway-washing-bg">
+            <div class="container">
+                <div class="breadcrumb-heading">
                     <h1>Driveway Pressure Cleaning</h1>
                     <p><a href="index.html">Home</a> > Services > <span>Driveway Pressure Cleaning</span></p>
                 </div>
