--- a/gardenmaintenance.html
+++ b/gardenmaintenance.html
@@ -64,12 +64,9 @@
         </div>
     </section>
     <section class="breadcrumb-wrapper">
-        <div class="container">
-            <div class="breadcrumb-container">
-                <div class="breadcrumb-gif-a">
-                    <img src="./gifs/garden.gif" alt="">
-                </div>
-                <div class="breadcrumb-heading-a">
+        <div class="garden-maintenance-bg">
+            <div class="container">
+                <div class="breadcrumb-heading">
                     <h1>Garden Maintenance</h1>
                     <p><a href="index.html">Home</a> > Services > <span>Garden Maintenance</span></p>
                 </div>
@@ -216,7 +213,6 @@
             </div>
         </footer>
     </section>
-    
 
     
 
