--- a/handymanservices.html
+++ b/handymanservices.html
@@ -64,12 +64,9 @@
         </div>
     </section>
     <section class="breadcrumb-wrapper">
-        <div class="container">
-            <div class="breadcrumb-container">
-                <div class="breadcrumb-gif-a">
-                    <img src="./gifs/handyman-services.gif" alt="">
-                </div>
-                <div class="breadcrumb-heading-a">
+        <div class="handyman-services-bg">
+            <div class="container">
+                <div class="breadcrumb-heading">
                     <h1>Handyman Services</h1>
                     <p><a href="index.html">Home</a> > Services > <span>Handyman Services</span></p>
                 </div>
